--- a/movies_etl.ipynb
+++ b/movies_etl.ipynb
@@ -1281,6 +1281,226 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Adaptation by',\n",
+       " 'Also known as',\n",
+       " 'Animation by',\n",
+       " 'Arabic',\n",
+       " 'Audio format',\n",
+       " 'Based on',\n",
+       " 'Box office',\n",
+       " 'Budget',\n",
+       " 'Cantonese',\n",
+       " 'Chinese',\n",
+       " 'Cinematography',\n",
+       " 'Color process',\n",
+       " 'Composer(s)',\n",
+       " 'Country',\n",
+       " 'Country of origin',\n",
+       " 'Created by',\n",
+       " 'Directed by',\n",
+       " 'Director',\n",
+       " 'Distributed by',\n",
+       " 'Distributor',\n",
+       " 'Edited by',\n",
+       " 'Editor(s)',\n",
+       " 'Executive producer(s)',\n",
+       " 'Followed by',\n",
+       " 'French',\n",
+       " 'Genre',\n",
+       " 'Hangul',\n",
+       " 'Hebrew',\n",
+       " 'Hepburn',\n",
+       " 'Japanese',\n",
+       " 'Label',\n",
+       " 'Language',\n",
+       " 'Length',\n",
+       " 'Literally',\n",
+       " 'Mandarin',\n",
+       " 'McCune–Reischauer',\n",
+       " 'Music by',\n",
+       " 'Narrated by',\n",
+       " 'Original language(s)',\n",
+       " 'Original network',\n",
+       " 'Original release',\n",
+       " 'Original title',\n",
+       " 'Picture format',\n",
+       " 'Polish',\n",
+       " 'Preceded by',\n",
+       " 'Produced by',\n",
+       " 'Producer',\n",
+       " 'Producer(s)',\n",
+       " 'Production company(s)',\n",
+       " 'Production location(s)',\n",
+       " 'Productioncompanies ',\n",
+       " 'Productioncompany ',\n",
+       " 'Recorded',\n",
+       " 'Release date',\n",
+       " 'Released',\n",
+       " 'Revised Romanization',\n",
+       " 'Romanized',\n",
+       " 'Running time',\n",
+       " 'Russian',\n",
+       " 'Screen story by',\n",
+       " 'Screenplay by',\n",
+       " 'Simplified',\n",
+       " 'Starring',\n",
+       " 'Story by',\n",
+       " 'Suggested by',\n",
+       " 'Theme music composer',\n",
+       " 'Traditional',\n",
+       " 'Venue',\n",
+       " 'Voices of',\n",
+       " 'Written by',\n",
+       " 'Yiddish',\n",
+       " 'imdb_link',\n",
+       " 'title',\n",
+       " 'url',\n",
+       " 'year']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki_movies_df[wiki_movies_df['Arabic'].notnull()]['url']\n",
+    "sorted(wiki_movies_df.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define function to clean wiki_movies\n",
+    "\n",
+    "def clean_movie(movie):\n",
+    "    # make a non-destructive copy of movie\n",
+    "    movie = dict(movie) # movie is a dict\n",
+    "    alt_titles = {}\n",
+    "    for key in ['Also known as','Arabic','Cantonese','Chinese','French',\n",
+    "                'Hangul','Hebrew','Hepburn','Japanese','Literally',\n",
+    "                'Mandarin','McCune–Reischauer','Original title','Polish',\n",
+    "                'Revised Romanization','Romanized','Russian',\n",
+    "                'Simplified','Traditional','Yiddish']:\n",
+    "        if key in movie:\n",
+    "            alt_titles[key] = movie[key]\n",
+    "            movie.pop(key)\n",
+    "    if len(alt_titles) > 0:\n",
+    "        movie['alt_titles'] = alt_titles\n",
+    "            \n",
+    "    return movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_movies = [clean_movie(movie) for movie in wiki_movies]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Adaptation by',\n",
+       " 'Animation by',\n",
+       " 'Audio format',\n",
+       " 'Based on',\n",
+       " 'Box office',\n",
+       " 'Budget',\n",
+       " 'Cinematography',\n",
+       " 'Color process',\n",
+       " 'Composer(s)',\n",
+       " 'Country',\n",
+       " 'Country of origin',\n",
+       " 'Created by',\n",
+       " 'Directed by',\n",
+       " 'Director',\n",
+       " 'Distributed by',\n",
+       " 'Distributor',\n",
+       " 'Edited by',\n",
+       " 'Editor(s)',\n",
+       " 'Executive producer(s)',\n",
+       " 'Followed by',\n",
+       " 'Genre',\n",
+       " 'Label',\n",
+       " 'Language',\n",
+       " 'Length',\n",
+       " 'Music by',\n",
+       " 'Narrated by',\n",
+       " 'Original language(s)',\n",
+       " 'Original network',\n",
+       " 'Original release',\n",
+       " 'Picture format',\n",
+       " 'Preceded by',\n",
+       " 'Produced by',\n",
+       " 'Producer',\n",
+       " 'Producer(s)',\n",
+       " 'Production company(s)',\n",
+       " 'Production location(s)',\n",
+       " 'Productioncompanies ',\n",
+       " 'Productioncompany ',\n",
+       " 'Recorded',\n",
+       " 'Release date',\n",
+       " 'Released',\n",
+       " 'Running time',\n",
+       " 'Screen story by',\n",
+       " 'Screenplay by',\n",
+       " 'Starring',\n",
+       " 'Story by',\n",
+       " 'Suggested by',\n",
+       " 'Theme music composer',\n",
+       " 'Venue',\n",
+       " 'Voices of',\n",
+       " 'Written by',\n",
+       " 'alt_titles',\n",
+       " 'imdb_link',\n",
+       " 'title',\n",
+       " 'url',\n",
+       " 'year']"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wiki_movies_df = pd.DataFrame(clean_movies)\n",
+    "sorted(wiki_movies_df.columns.tolist())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
